refines issue7 cover spacing

--- a/styles/Issue7.module.css
+++ b/styles/Issue7.module.css
@@ -109,7 +109,7 @@
   color: #f70d1a;
   text-shadow: 2px 2px white, 4px 4px black, 6px 6px white, 8px 8px black,
     10px 10px white, 12px 12px black, 14px 14px 20px silver;
-  font-size: 3rem;
+  font-size: 2.6rem;
   line-height:2.7rem;
   text-align: right;
   margin: 2vh 2vw 0 0;
